Revision history for Perl extension Coro.

TODO: better (earlier) error messages on broken transfer's
TODO: destroy gets only called on cancel: fix(?)
TODO: should explore PerlIO::via::CoroCede and PerlIO::via::CoroAIO.
TODO: maybe implement a default message channel, very much like Erlang
      (which is cool in a lot of important aspects (failures!),
      but very lacking in others).

3.8
        - incompatibly changed Coro::Storable::freeze.
        - major new feature: added Coro::Debug, for interactive coroutine
          debugging, tracing and much more.
	- added Coro::Semaphore::adjust.
        - added Coro::Util::fork_eval.
        - added Coro::Storable::{nfreeze,blocking_{freeze,nfreeze}}.
        - reduce initial stack sizes to allow for "micro-coroutines".
        - better async_pool resource management, moved parts of async_pool
          handling to XS (major speed improvement).
        - many minor tweaks.

3.63 Wed May 16 14:10:06 CEST 2007
	- implement handcoded assembly for x86/amd64 SVR ABI.

3.62 Fri Apr 27 21:36:06 CEST 2007
	- upgrade libcoro (which might set unwind info correctly).
        - change default on linux to setjmp/longjmp.

3.61 Thu Apr 19 12:36:18 CEST 2007
	- Coro::Storable caused an endless loop when thawing invalid
          pst's sometimes.
	- use a Semaphore in Coro::Storable, as Storable doesn't
          seem to be reentrant (although it is documented to
          be threadsafe...).
        - fix Coro::Signal to bring back the original unreliable
          but stateful semantics.
        - fixed a lot of typos in Coro.pm (patch submitted by David
          Steinbrunner, which applied flawlessly).

3.6  Sat Apr 14 17:13:31 CEST 2007
   	- added some bugfixes to get eg/myhttpd working again.
        - added Coro::Storable for often-cede'ing freeze/thaw.
        - try to do a clean exit when a coroutine calls exit
          (EXPERIMENTAL).
        - got rid of indirect call through _coro_init.